--- a/css/media.css
+++ b/css/media.css
@@ -60,18 +60,6 @@
         width: 50%;
     }
     /* ************************************* */
-    /* CV-CARD HOVER */
-    /* .card:hover {
-        background-color: var(--secondary-color);
-        box-shadow: var(--card-shadow);
-        transition: all .2s;
-        cursor: pointer;
-    }
-    .card:active {
-        scale: 0.98;
-        box-shadow: inset 0 0 5px;
-        transition: all 0s;
-    } */
     .close:hover {
         cursor: pointer;
         color: rgba(0, 0, 0, 0.61);
@@ -128,9 +116,21 @@
     .media-scroller{
         grid-auto-columns: 27%;
     }
+    .media-scroller.active {
+        scroll-behavior: smooth;
+    }
     .project-cards {
         gap: 2vw;
         margin: 0 2vw;
+    }
+    .card:hover {
+        filter: blur(3px);
+        -webkit-filter: blur(3px);
+        opacity: .5;
+        transition: all .2s ease-out;
+    }
+    .card:hover .card-content{
+        display: block;
     }
     .card a:hover{
         background-color: white;
