css cleanup with more classnames

--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@
     width: min(700px, 95%);
     overflow: hidden;  
 }
-.image-wrapper img {
+.profile-picture {
     width: 100%;
     display: block;
     object-fit: cover;
@@ -35,8 +35,7 @@
     gap: var(--default-padding);
     justify-items: center;
 }
-.image-wrapper div,
-.image-wrapper a {
+.hidden-link {
     display: none;
 }
 /* PROJECTS */
@@ -55,9 +54,6 @@
     scroll-padding: var(--default-padding, 1rem);
     cursor: pointer;
 }
-.media-scroller.active {
-    cursor: grab;
-}
 .project-cards {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
@@ -67,7 +63,7 @@
 }
 .card {
     aspect-ratio: 1/1.2;
-    padding: var(--default-padding);
+    /* padding: var(--default-padding); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,7 +73,13 @@
     background-position: center;
     position: relative;
 }
-.card a {
+.card-bg {
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    background: url('https://source.unsplash.com/featured/450x500');
+}
+.project-link{
     text-decoration: none;
     background-color: var(--primary-color);
     color: white;
@@ -86,7 +88,6 @@
 }
 .card-content {
     color: white;
-    /* z-index: 100; */
     width: 100%;
     position: absolute;
     inset: 50% auto auto 50%; 
