--- a/css/home.css
+++ b/css/home.css
@@ -92,5 +92,7 @@
     position: absolute;
     inset: 50% auto auto 50%; 
     transform: translate(-50%, -50%);
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
