readability on project title and project link buttons

--- a/css/cv.css
+++ b/css/cv.css
@@ -22,7 +22,6 @@ main{
 .about h2 {
     text-align: center;
 }
-
 /* CARDS */
 .education {
     border-bottom: 2px solid var(--primary-color);
@@ -51,6 +50,9 @@ main{
     flex-direction: column;
     align-items: center;
     position: relative;
+}
+.card:hover {
+    cursor: pointer;
 }
 .card img{
     margin-top: auto;
@@ -86,9 +88,6 @@ dialog::backdrop {
 dialog img {
     width: 60%;
     max-width: 10rem;
-}
-dialog a:hover {
-    scale: 1.05;
 }
 dialog p {
     margin-top: 2rem;
