--- a/css/home.css
+++ b/css/home.css
@@ -113,11 +113,10 @@
     outline: 1px solid black;
 }
 .project-title {
-    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+    background-color: #000;
 }
 .card-content {
-    font-size: clamp(.5rem, .5rem + 2vw, 2rem);
-    /* background-color: black; */
+    font-size: clamp(.5rem, .5rem + 1vw, 2rem);
     color: white;
     width: 100%;
     height: 100%;
