Fix HTML structure and classnames

--- a/css/cv.css
+++ b/css/cv.css
@@ -8,27 +8,24 @@ main{
     flex-direction: column;
     justify-content: start;
 }
-.about {
+.about-section {
     width: 100%;
     padding: 0 1rem calc(1rem + 2vw);
     border-bottom: 2px solid var(--primary-color);
 }
-.about p {
+.about-me {
     max-width: 700px;
     line-height: 1.5;
     font-size: 1.25rem;
     margin: 0 auto;
 }
-.about h2 {
-    text-align: center;
-}
 /* CARDS */
-.education {
+.education-section {
     border-bottom: 2px solid var(--primary-color);
     margin-bottom: calc(1em + 2vw) 0;
     padding: 0 1rem calc(1rem + 2vw);
 }
-.jobs {
+.job-section {
     padding: 0 1rem calc(1rem + 2vw);
 }
 .cards {
